--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcc 'BX'
 - !lcsh 'Universalism'
 - !lcsh 'Universalists -- United States -- History'
+- GITenberg
 title: "Fifty Notable Years\r\nViews of the Ministry of Christian Universalism During\
   \ the Last Half-Century; with Biographical Sketches"
 url: http://www.gutenberg.org/ebooks/45034
